hack/scale-to-zero/externalservice-ollama.yaml
apiVersion: v1
kind: Service
metadata:
  name: team-a-aichat-ollama-proxy
spec:
  type: ExternalName
  externalName: keda-add-ons-http-interceptor-proxy.keda
