hack/scale-to-zero/externalservice-openwebui.yaml
apiVersion: v1
kind: Service
metadata:
  name: openwebui-http-interceptor-proxy
  namespace: scale-to-zero
spec:
  type: ExternalName
  externalName: keda-add-ons-http-interceptor-proxy.keda
